# fieldnote

./: .gitignore  AGENTS.md  DAILY_USE.md  LICENSE  QUICKSTART_3_COMMANDS.md  README.md  kb.config.json  lkb.toml.example  package-lock.json  package.json  pyproject.toml  tsconfig.json
.kb/: build-state.json  sources.json
.kb/context-packs/: 2026-04-10T19-41-22-548Z-was-sind-managed-agents-in-claude-ask.md  latest.json
.obsidian/: workspace.json
prompts/: autoresearch-planner.md  autoresearch-synthesizer.md  chart.md  comparison-drafter.md  concept-synthesizer.md  contradiction-analyst.md  entity-synthesizer.md  graph-auditor.md  heal-apply.md  heal.md  page-reviser.md  research-answer.md  revision-manager.md  slides.md  source-review.md  source-summarizer.md
scripts/: install-kb.mjs
src/: autoresearch.ts  brief.ts  cli-workflows.ts  cli.ts  config.ts  context-pack.ts  dashboard-hub.ts  dashboard.ts  navigation.ts  obsidian.ts  openai.ts  output-formats.ts  prompts.ts  review.ts  search.ts  source.ts  terminal-dashboard.ts  types.ts  utils.ts  watch-mode.ts  wiki.ts
src/llm_kb/: __init__.py  cli.py  config.py  markdown.py  models.py  openai_runtime.py  parsers.py  paths.py  prompts.py  search.py  utils.py
tests/: autoresearch.test.ts  clippings.test.ts  dashboard-hub.test.ts  dashboard.test.ts  evolve.test.ts  heal.test.ts  navigation.test.ts  obsidian.test.ts  output-formats.test.ts  prompt-style.test.ts  review.test.ts  search.test.ts  source.test.ts  test_core.py  test_markdown.py  test_search.py  test_utils.py  wiki-incremental.test.ts
vault/: Home.md
(+129 files in other folders)
